<resources>
    <string name="app_name">Catalogue</string>
    <string name="loginFragment_signUp_tv">Nemate korisnički račun?\nRegistriraj se</string>
    <string name="et_username_hint">Korisničko ime</string>
    <string name="et_password_hint">Lozinka</string>
    <string name="mb_login_text">Prijavi se</string>
    <string name="iv_logo_description">App logo</string>
    <string name="register_et_name_hint">Ime</string>
    <string name="register_et_surname_hint">Prezime</string>
    <string name="register_et_username_hint">Korisničko ime</string>
    <string name="register_et_password_hint">Lozinka</string>
    <string name="register_et_email_hint">E-mail</string>
    <string name="register_et_password_confirm_hint">Ponovno unesite lozinku</string>
    <string name="register_b_register_text">Registriraj se</string>
    <string name="iv_favourite_description">Add to favourite</string>
    <string name="et_search_hint">Pretražite proizvode</string>
    <string name="iv_store_contentDescription">Store</string>
    <string name="iv_price_contentDescription">Price</string>
    <string name="iv_star_contentDescription">Star</string>
    <string name="places_api_key">AIzaSyAIYZY6mrRDnFWRS-A4r2wZht9QiiDfRmQ</string>
    <string name="current_user_marker">Vaša lokacija</string>
    <string name="mb_logout_text">Odjavi se</string>
    <string name="tv_favourites_text">Moji favoriti</string>
    <string name="tv_recension_text">Moje recenzije</string>
    <string name="mandatory_field">Ovo polje je obavezno!</string>
    <string name="places_type_filter">grocery</string>
    <string name="tv_userInfo_text">Osnovne informacije</string>
</resources>