<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_small"
    android:background="@drawable/organization_border">

    <ImageView
        android:id="@+id/iv_store"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/iv_store_contentDescription"
        android:src="@drawable/store"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_price"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/iv_price_contentDescription"
        android:src="@drawable/money"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_store" />

    <TextView
        android:id="@+id/tv_store"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        app:layout_constraintBottom_toBottomOf="@id/iv_store"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_store"
        app:layout_constraintTop_toTopOf="@id/iv_store"
        tools:text="@tools:sample/lorem"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        app:layout_constraintBottom_toBottomOf="@id/iv_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_price"
        app:layout_constraintTop_toBottomOf="@id/iv_store"
        tools:text="@tools:sample/lorem"
        android:textColor="@color/black" />

    <ImageView
        android:id="@+id/iv_star"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toTopOf="@id/iv_store"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/iv_price"
        android:contentDescription="@string/iv_star_contentDescription"
        tools:src="@drawable/star_gold"/>

</androidx.constraintlayout.widget.ConstraintLayout>